# cookiecutter-python-devcontainer-project

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
